force-app/main/default/objects/Loan_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( ISPICKVAL(Loan_Status__c,&#39;New&#39;), &#39;New&#39;, 
(IF(ISPICKVAL(Loan_Status__c,&#39;Approved&#39;),&#39;Approved&#39;,
(IF(ISPICKVAL(Loan_Status__c,&#39;New&#39;) &amp;&amp;  DATEVALUE(CreatedDate)&lt; TODAY(),&#39;Approved&#39;,TEXT(Loan_Status__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>