force-app/main/default/objects/Loan_Application__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Term in Month</description>
    <inlineHelpText>Term in Months</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>